--- a/login.html
+++ b/login.html
@@ -73,35 +73,41 @@
                         <!-- login card end  -->
                     </div>
                     <div class="col-lg-6  ">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
                             <!-- notams section start  -->
                             <span
                                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Administrator</span>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci assumenda deleniti quas
-                                maxime, modi, similique ipsum quisquam, ut corporis dolorem incidunt nam nostrum
-                                consequuntur laboriosam omnis libero sed nesciunt. Vitae!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci assumenda deleniti
-                                quas maxime, modi, similique ipsum quisquam, ut corporis dolorem incidunt nam nostrum
-                                consequuntur laboriosam omnis libero sed nesciunt. Vitae!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci assumenda deleniti
-                                quas maxime, modi, similique ipsum quisquam, ut corporis dolorem incidunt nam nostrum
-                                consequuntur laboriosam omnis libero sed nesciunt. Vitae!dolorem incidunt nam nostrum
-                                consequuntur laboriosam omnis libero sed nesciunt. Vitae!
-                            </p>
+                            <span class="d-block">(S8973/22 NOTAMR $8936/22A) CYYT B) 2202132058 C) 2202140458E) RSC 11 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
+                            </span>
+                            <span class="d-block">
+                                RSC 29 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
+                            </span>
+                            <span class="d-block">
+                                RSC 16 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
+                            </span>
+                            <span class="d-block">
+                                RSC 34 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
+                            </span>
+                            <span class="d-block">
+                                (H0242/22 NOTAMR H3491/21A) CZQX CZQM CZUL B) 2201272036 C) 2204251500EST E) COVID 19: INFORMATION
+                            </span>
+                            <span class="d-block">
+                                BORDER SVC ARE TEMPO SUSPENDED AT THE MAJORITY OF SMALL AIRPORTS ACROSS CANADA, FOR AN UPDATED LIST OF AUTH AIRPORTS OF ENTRY SEE THE LINK FOR OPEN PORTS OF ENTRY AT WWW.CBSA-ASFC.GC.CA/OFFICES
+                            </span>
                             <!-- notams section end  -->
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 mt-3 mt-lg-0 ">
                             <!-- Airport Bulletin section start  -->
                             <span
-                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Airport Bulletin</span>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci assumenda deleniti quas
-                            </p>
+                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport Bulletin</span>
+                            <span>This is a space where important information, daily happenings/updates will be posted.
+                            </span>
                             <!-- Airport Bulletin section end  -->
                         </div>
 
-                        <div class="rounded-3 bg-white border text-center border-light shadow-sm mt-2 px-2">
+                        <div class="rounded-3 bg-white border text-center border-light shadow-sm mt-2 px-2 mt-3 ">
                             <!-- sms section start  -->
                             <span
                                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">SMS Stats</span>
@@ -114,10 +120,10 @@
             <div class="col-lg-4">
 <div class="row">
     <div class="col-lg-8">
-        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100 mt-3 mt-lg-0">
             <!-- Sun & Cloud section start  -->
             <span
-                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Airport Bulletin</span>
+                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport Bulletin</span>
            <div class="d-flex justify-content-evenly">
 <img src="./assets/imgs/sun_moon.png" class="d-block text-center" height="100px" alt="">
 <div class="d-flex align-items-center">
@@ -141,7 +147,18 @@
             <!-- Airport Bulletin section start  -->
             <span
                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC Level</span>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus natus, sint culpa quia sequi at harum exercitationem amet praesentium voluptatibus, adipisci eveniet minima animi dolorum aut consequuntur voluptate enim. Quidem. sint culpa quia sequi at harum exercitationem amet praesentium voluptatibus, adipisci eveniet minima animi dolorum aut consequuntur voluptate enim. Quidem.</p>
+                <span class="text-muted d-block"><b class="text-dark">Airport Personnel -</b> Feb 13, 2022</span>
+                <span class="text-muted d-block"><b class="text-dark">Operations & Emergency Services: </b> M.Stella</span>
+                <span class="text-muted d-block"><b class="text-dark">AOS/Firefighters:</b></span>
+                <span class="text-muted d-block ms-2"><b class="text-dark">AM:</b>Cpt. B. Haley, T. Bradshaw, C. Luehr, B. Shannon</span>
+                <span class="text-muted d-block"><b class="text-dark">Afternoon:</b></span>
+                <span class="text-muted d-block ms-2">
+                    <b class="text-dark">PM:</b> Cpt. C. Smith, C. Anderson, W. Stewart, S. Schlosser, J. Reynolds
+                </span>
+                <span class="text-muted d-block"><b class="text-dark">Mechanics:</b>D Bourgeau</span>
+                <span class="text-muted d-block"><b class="text-dark">Duty Manager:</b>W. Bennett</span>
+                <span class="text-muted d-block"><b class="text-dark">RCMP:</b>On Site until 15:00</span>
+                <span class="text-muted d-block"><b class="text-dark">Airport Manager on Call (AMOC):</b>Phillip Elchitz</span>
             <!-- Airport Bulletin section end  -->
         </div>
     </div>
@@ -151,8 +168,15 @@
             <!-- Airport Bulletin section start  -->
             <span
                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Rerminal / Groundside</span>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus natus, sint culpa quia sequi at harum exercitationem amet praesentium voluptatibus,
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus natus, sint culpa quia sequi at harum exercitationem amet praesentium voluptatibus Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+               <span class="d-block"><i class="bi bi-x-square text-danger"></i> Arrival carousels</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Cuss/cute</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Fids</span>
+               <span class="d-block"><i class="bi bi-cone text-warning"></i> escalator</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> elevator</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> pre board screening</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> washrooms</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> check in counters</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Parking machines</span>
             <!-- Airport Bulletin section end  -->
         </div>
     </div>
@@ -162,8 +186,17 @@
             <!-- Airport Bulletin section start  -->
             <span
                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Daily Ops</span>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus natus, sint culpa quia sequi at harum exercitationem amet praesentium voluptatibus,
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus natus, sint culpa quia sequi at harum exercitationem amet praesentium voluptatibus Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <span class="d-block"><i class="bi bi-square-fill text-success"></i> Bridges</span>
+               <span class="d-block"><i class="bi bi-cone text-warning"></i> Bridge 2</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Glycol facility</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Remote parking stands</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Aircraft movement areas</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Short term parking</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Long term parking</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Fuel stand</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> NAV Aids</span>
+               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Roadway</span>
+               <span class="d-block"><i class="bi bi-x-square text-danger"></i> De-icing pad</span>
             <!-- Airport Bulletin section end  -->
         </div>
     </div>
