--- a/login.html
+++ b/login.html
@@ -187,7 +187,7 @@
             <span
                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Daily Ops</span>
                 <span class="d-block"><i class="bi bi-square-fill text-success"></i> Bridges</span>
-               <span class="d-block"><i class="bi bi-cone text-warning"></i> Bridge 2</span>
+               <span class="d-block ms-3"><i class="bi bi-cone text-warning"></i> Bridge 2</span>
                <span class="d-block"><i class="bi bi-square-fill text-success"></i> Glycol facility</span>
                <span class="d-block"><i class="bi bi-square-fill text-success"></i> Remote parking stands</span>
                <span class="d-block"><i class="bi bi-square-fill text-success"></i> Aircraft movement areas</span>
