--- a/Data_form.html
+++ b/Data_form.html
@@ -21,8 +21,7 @@
         <div class="row">
             <!-- nav bar start -->
             <div class="col-lg-12 background_img">
-                <nav id="colorChangingDiv"
-                    class="navbar fixed-top   navbar-expand-lg  py-4 btn-secondary ">
+                <nav id="colorChangingDiv" class="navbar fixed-top   navbar-expand-lg  py-4 btn-secondary ">
                     <div class="container d-none d-lg-block d-xl-block w-100">
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -361,7 +360,7 @@
                                         User</span>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div 
+                                    <div
                                         class="d-flex justify-content-between flex-column flex-lg-row flex-md-row mb-3">
                                         <div class="">
                                             <label for="" class="p-1 me-1 form-label_css">Create Emergency Log?</label>
