--- a/Index.html
+++ b/Index.html
@@ -271,7 +271,8 @@
                   </select>
                 </div>
                 <div class="col-lg-2">
-                  <input class="form-control form-control-solid form-input_text mt-5" placeholder="Search" aria-label="Default select example">
+                  <input class="form-control form-control-solid form-input_text mt-5" placeholder="Search"
+                    aria-label="Default select example">
                   </input>
                 </div>
 
