--- a/login.html
+++ b/login.html
@@ -77,7 +77,8 @@
                             <!-- notams section start  -->
                             <span
                                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Administrator</span>
-                            <span class="d-block">(S8973/22 NOTAMR $8936/22A) CYYT B) 2202132058 C) 2202140458E) RSC 11 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
+                            <span class="d-block">(S8973/22 NOTAMR $8936/22A) CYYT B) 2202132058 C) 2202140458E) RSC 11
+                                6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
                             </span>
                             <span class="d-block">
                                 RSC 29 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
@@ -89,10 +90,13 @@
                                 RSC 34 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
                             </span>
                             <span class="d-block">
-                                (H0242/22 NOTAMR H3491/21A) CZQX CZQM CZUL B) 2201272036 C) 2204251500EST E) COVID 19: INFORMATION
+                                (H0242/22 NOTAMR H3491/21A) CZQX CZQM CZUL B) 2201272036 C) 2204251500EST E) COVID 19:
+                                INFORMATION
                             </span>
                             <span class="d-block">
-                                BORDER SVC ARE TEMPO SUSPENDED AT THE MAJORITY OF SMALL AIRPORTS ACROSS CANADA, FOR AN UPDATED LIST OF AUTH AIRPORTS OF ENTRY SEE THE LINK FOR OPEN PORTS OF ENTRY AT WWW.CBSA-ASFC.GC.CA/OFFICES
+                                BORDER SVC ARE TEMPO SUSPENDED AT THE MAJORITY OF SMALL AIRPORTS ACROSS CANADA, FOR AN
+                                UPDATED LIST OF AUTH AIRPORTS OF ENTRY SEE THE LINK FOR OPEN PORTS OF ENTRY AT
+                                WWW.CBSA-ASFC.GC.CA/OFFICES
                             </span>
                             <!-- notams section end  -->
                         </div>
@@ -101,7 +105,8 @@
                         <div class="rounded-3 bg-white border border-light shadow-sm px-2 mt-3 mt-lg-0 ">
                             <!-- Airport Bulletin section start  -->
                             <span
-                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport Bulletin</span>
+                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport
+                                Bulletin</span>
                             <span>This is a space where important information, daily happenings/updates will be posted.
                             </span>
                             <!-- Airport Bulletin section end  -->
@@ -109,98 +114,111 @@
 
                         <div class="rounded-3 bg-white border text-center border-light shadow-sm mt-2 px-2 mt-3 ">
                             <!-- sms section start  -->
-                            <span
-                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">SMS Stats</span>
-                                <img src="./assets/imgs/donut.png" class="img-fluid " alt="">
+                            <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">SMS
+                                Stats</span>
+                            <img src="./assets/imgs/donut.png" class="img-fluid " alt="">
                             <!-- sms section end  -->
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4">
-<div class="row">
-    <div class="col-lg-8">
-        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100 mt-3 mt-lg-0">
-            <!-- Sun & Cloud section start  -->
-            <span
-                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport Bulletin</span>
-           <div class="d-flex justify-content-evenly">
-<img src="./assets/imgs/sun_moon.png" class="d-block text-center" height="100px" alt="">
-<div class="d-flex align-items-center">
-    <h3>6<sup>o</sup>C</h3>
-</div>
-           </div>
-            <!-- Sun & Cloud section end  -->
-        </div>
-    </div>
-    <div class="col-lg-4">
-        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
-            <!-- Airport Bulletin section start  -->
-            <span
-                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC Level</span>
-           <h1 class="text-center">2</h1>
-            <!-- Airport Bulletin section end  -->
-        </div>
-    </div>
-    <div class="col-lg-12 mt-3">
-        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
-            <!-- Airport Bulletin section start  -->
-            <span
-                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC Level</span>
-                <span class="text-muted d-block"><b class="text-dark">Airport Personnel -</b> Feb 13, 2022</span>
-                <span class="text-muted d-block"><b class="text-dark">Operations & Emergency Services: </b> M.Stella</span>
-                <span class="text-muted d-block"><b class="text-dark">AOS/Firefighters:</b></span>
-                <span class="text-muted d-block ms-2"><b class="text-dark">AM:</b>Cpt. B. Haley, T. Bradshaw, C. Luehr, B. Shannon</span>
-                <span class="text-muted d-block"><b class="text-dark">Afternoon:</b></span>
-                <span class="text-muted d-block ms-2">
-                    <b class="text-dark">PM:</b> Cpt. C. Smith, C. Anderson, W. Stewart, S. Schlosser, J. Reynolds
-                </span>
-                <span class="text-muted d-block"><b class="text-dark">Mechanics:</b>D Bourgeau</span>
-                <span class="text-muted d-block"><b class="text-dark">Duty Manager:</b>W. Bennett</span>
-                <span class="text-muted d-block"><b class="text-dark">RCMP:</b>On Site until 15:00</span>
-                <span class="text-muted d-block"><b class="text-dark">Airport Manager on Call (AMOC):</b>Phillip Elchitz</span>
-            <!-- Airport Bulletin section end  -->
-        </div>
-    </div>
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100 mt-3 mt-lg-0">
+                            <!-- Sun & Cloud section start  -->
+                            <span
+                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport
+                                Bulletin</span>
+                            <div class="d-flex justify-content-evenly">
+                                <img src="./assets/imgs/sun_moon.png" class="d-block text-center" height="100px" alt="">
+                                <div class="d-flex align-items-center">
+                                    <h3>6<sup>o</sup>C</h3>
+                                </div>
+                            </div>
+                            <!-- Sun & Cloud section end  -->
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                            <!-- Airport Bulletin section start  -->
+                            <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC
+                                Level</span>
+                            <h1 class="text-center">2</h1>
+                            <!-- Airport Bulletin section end  -->
+                        </div>
+                    </div>
+                    <div class="col-lg-12 mt-3">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                            <!-- Airport Bulletin section start  -->
+                            <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC
+                                Level</span>
+                            <span class="text-muted d-block"><b class="text-dark">Airport Personnel -</b> Feb 13,
+                                2022</span>
+                            <span class="text-muted d-block"><b class="text-dark">Operations & Emergency Services: </b>
+                                M.Stella</span>
+                            <span class="text-muted d-block"><b class="text-dark">AOS/Firefighters:</b></span>
+                            <span class="text-muted d-block ms-2"><b class="text-dark">AM:</b>Cpt. B. Haley, T.
+                                Bradshaw, C. Luehr, B. Shannon</span>
+                            <span class="text-muted d-block"><b class="text-dark">Afternoon:</b></span>
+                            <span class="text-muted d-block ms-2">
+                                <b class="text-dark">PM:</b> Cpt. C. Smith, C. Anderson, W. Stewart, S. Schlosser, J.
+                                Reynolds
+                            </span>
+                            <span class="text-muted d-block"><b class="text-dark">Mechanics:</b>D Bourgeau</span>
+                            <span class="text-muted d-block"><b class="text-dark">Duty Manager:</b>W. Bennett</span>
+                            <span class="text-muted d-block"><b class="text-dark">RCMP:</b>On Site until 15:00</span>
+                            <span class="text-muted d-block"><b class="text-dark">Airport Manager on Call
+                                    (AMOC):</b>Phillip Elchitz</span>
+                            <!-- Airport Bulletin section end  -->
+                        </div>
+                    </div>
 
-    <div class="col-lg-6 mt-3">
-        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
-            <!-- Airport Bulletin section start  -->
-            <span
-                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Rerminal / Groundside</span>
-               <span class="d-block"><i class="bi bi-x-square text-danger"></i> Arrival carousels</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Cuss/cute</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Fids</span>
-               <span class="d-block"><i class="bi bi-cone text-warning"></i> escalator</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> elevator</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> pre board screening</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> washrooms</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> check in counters</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Parking machines</span>
-            <!-- Airport Bulletin section end  -->
-        </div>
-    </div>
+                    <div class="col-lg-6 mt-3">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                            <!-- Airport Bulletin section start  -->
+                            <span
+                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Rerminal
+                                / Groundside</span>
+                            <span class="d-block"><i class="bi bi-x-square text-danger"></i> Arrival carousels</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Cuss/cute</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Fids</span>
+                            <span class="d-block"><i class="bi bi-cone text-warning"></i> escalator</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> elevator</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> pre board
+                                screening</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> washrooms</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> check in
+                                counters</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Parking machines</span>
+                            <!-- Airport Bulletin section end  -->
+                        </div>
+                    </div>
 
-    <div class="col-lg-6 mt-3">
-        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
-            <!-- Airport Bulletin section start  -->
-            <span
-                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Daily Ops</span>
-                <span class="d-block"><i class="bi bi-square-fill text-success"></i> Bridges</span>
-               <span class="d-block ms-3"><i class="bi bi-cone text-warning"></i> Bridge 2</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Glycol facility</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Remote parking stands</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Aircraft movement areas</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Short term parking</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Long term parking</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Fuel stand</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> NAV Aids</span>
-               <span class="d-block"><i class="bi bi-square-fill text-success"></i> Roadway</span>
-               <span class="d-block"><i class="bi bi-x-square text-danger"></i> De-icing pad</span>
-            <!-- Airport Bulletin section end  -->
-        </div>
-    </div>
-</div>
+                    <div class="col-lg-6 mt-3">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                            <!-- Airport Bulletin section start  -->
+                            <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Daily
+                                Ops</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Bridges</span>
+                            <span class="d-block ms-3"><i class="bi bi-cone text-warning"></i> Bridge 2</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Glycol facility</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Remote parking
+                                stands</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Aircraft movement
+                                areas</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Short term
+                                parking</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Long term
+                                parking</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Fuel stand</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> NAV Aids</span>
+                            <span class="d-block"><i class="bi bi-square-fill text-success"></i> Roadway</span>
+                            <span class="d-block"><i class="bi bi-x-square text-danger"></i> De-icing pad</span>
+                            <!-- Airport Bulletin section end  -->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
