--- a/notam.html
+++ b/notam.html
@@ -21,8 +21,7 @@
         <div class="row">
             <!-- nav bar start -->
             <div class="col-lg-12 background_img">
-                <nav id="colorChangingDiv"
-                    class="navbar fixed-top   navbar-expand-lg  py-4 btn-secondary ">
+                <nav id="colorChangingDiv" class="navbar fixed-top   navbar-expand-lg  py-4 btn-secondary ">
                     <div class="container d-none d-lg-block d-xl-block w-100">
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -104,131 +103,132 @@
                     <div class="row">
                         <div class="col-lg-12  bg-white border shadow-sm rounded-3 ">
                             <span class="head_style_radio   d-block px-2 mt-3 border-bottom pb-3"> Template</span>
-                                <div class="row mt-3">
-                                    <div class="col-lg-12">
-                                        <span class="head_style_radio  d-block px-2 mb-1 pb-1"> Department :
-                                           Infrastructure</span>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <span class="head_style_radio  d-block px-2 mb-1 pb-1"> Category : Visual Aids</span>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <span class="head_style_radio  d-block px-2 mb-1 pb-1"> Sub category : 2 consecutive</span>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <span class="head_style_radio  d-block px-2 mb-1 pb-1"> NOTAM Template : NOTAM A) CYVP B)YYMMDDHHMM E)RWY 13/31 CLSD</span>
-                                    </div>
+                            <div class="row mt-3">
+                                <div class="col-lg-12">
+                                    <span class="head_style_radio  d-block px-2 mb-1 pb-1"> Department :
+                                        Infrastructure</span>
                                 </div>
+                                <div class="col-lg-12">
+                                    <span class="head_style_radio  d-block px-2 mb-1 pb-1"> Category : Visual
+                                        Aids</span>
+                                </div>
+                                <div class="col-lg-12">
+                                    <span class="head_style_radio  d-block px-2 mb-1 pb-1"> Sub category : 2
+                                        consecutive</span>
+                                </div>
+                                <div class="col-lg-12">
+                                    <span class="head_style_radio  d-block px-2 mb-1 pb-1"> NOTAM Template : NOTAM A)
+                                        CYVP B)YYMMDDHHMM E)RWY 13/31 CLSD</span>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="col-lg-12 mt-3 pb-3  bg-white border shadow-sm rounded-3 ">
                             <span class="head_style_radio   d-block px-2 mt-3 border-bottom pb-3"> Issue NOTAM</span>
-                                <div class="row mt-3">
-                                    
-                                    <div class="col-lg-3">
-                                        <label for="exampleFormControlInput1"
-                                            class="font_lable form-label "> Airport Ident
-                                        </label>
-                                        <select class="form-select form-control-solid form-input_text"
-                                            aria-label="Default select example">
-                                            <option selected>select an option</option>
-                                            <option value="1">One</option>
-                                            <option value="2">Two</option>
-                                            <option value="3">Three</option>
-                                        </select>
-                                    </div>
+                            <div class="row mt-3">
 
-                                    <div class="row">
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">NOTAM Start Date</label>
-                                            <input class="form-control form-control-solid form-input_text" type="date">
-                                            </input>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">Notam End Date</label>
-                                            <input class="form-control form-control-solid form-input_text" type="date">
-                                            </input>
-                                        </div>
+                                <div class="col-lg-3">
+                                    <label for="exampleFormControlInput1" class="font_lable form-label "> Airport Ident
+                                    </label>
+                                    <select class="form-select form-control-solid form-input_text"
+                                        aria-label="Default select example">
+                                        <option selected>select an option</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">NOTAM
+                                            Start Date</label>
+                                        <input class="form-control form-control-solid form-input_text" type="date">
+                                        </input>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">Start Time (Zulu)</label>
-                                            <input class="form-control form-control-solid form-input_text" type="time">
-                                            </input>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">End Time (Zulu)</label>
-                                            <input class="form-control form-control-solid form-input_text" type="time">
-                                            </input>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="form-floating mt-3">
-                                                <textarea class="form-control  form-control-solid form-input_text"
-                                                    placeholder="Leave a comment here"></textarea>
-                                                <label for="floatingTextarea">NOTAM Content</label>
-                                            </div>
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Notam
+                                            End Date</label>
+                                        <input class="form-control form-control-solid form-input_text" type="date">
+                                        </input>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Start
+                                            Time (Zulu)</label>
+                                        <input class="form-control form-control-solid form-input_text" type="time">
+                                        </input>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">End
+                                            Time (Zulu)</label>
+                                        <input class="form-control form-control-solid form-input_text" type="time">
+                                        </input>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <div class="form-floating mt-3">
+                                            <textarea class="form-control  form-control-solid form-input_text"
+                                                placeholder="Leave a comment here"></textarea>
+                                            <label for="floatingTextarea">NOTAM Content</label>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                         </div>
 
                         <div class="col-lg-12 mt-3 pb-3  bg-white border shadow-sm rounded-3 ">
                             <span class="head_style_radio   d-block px-2 mt-3 border-bottom pb-3"> Extend NOTAM</span>
-                                <div class="row mt-3">
-                                    
-                                    <div class="col-lg-3">
-                                        <label for="exampleFormControlInput1"
-                                            class="font_lable form-label "> Airport Ident
-                                        </label>
-                                        <select class="form-select form-control-solid form-input_text"
-                                            aria-label="Default select example">
-                                            <option selected>select an option</option>
-                                            <option value="1">One</option>
-                                            <option value="2">Two</option>
-                                            <option value="3">Three</option>
-                                        </select>
-                                    </div>
+                            <div class="row mt-3">
 
-                                    <div class="row">
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">NOTAM Start Date</label>
-                                            <input class="form-control form-control-solid form-input_text" type="date">
-                                            </input>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">Notam End Date</label>
-                                            <input class="form-control form-control-solid form-input_text" type="date">
-                                            </input>
-                                        </div>
+                                <div class="col-lg-3">
+                                    <label for="exampleFormControlInput1" class="font_lable form-label "> Airport Ident
+                                    </label>
+                                    <select class="form-select form-control-solid form-input_text"
+                                        aria-label="Default select example">
+                                        <option selected>select an option</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">NOTAM
+                                            Start Date</label>
+                                        <input class="form-control form-control-solid form-input_text" type="date">
+                                        </input>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">Start Time (Zulu)</label>
-                                            <input class="form-control form-control-solid form-input_text" type="time">
-                                            </input>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <label for="exampleFormControlInput1"
-                                                class="font_lable form-label mt-3 ">End Time (Zulu)</label>
-                                            <input class="form-control form-control-solid form-input_text" type="time">
-                                            </input>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="form-floating mt-3">
-                                                <textarea class="form-control  form-control-solid form-input_text"
-                                                    placeholder="Leave a comment here"></textarea>
-                                                <label for="floatingTextarea">NOTAM Content</label>
-                                            </div>
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Notam
+                                            End Date</label>
+                                        <input class="form-control form-control-solid form-input_text" type="date">
+                                        </input>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Start
+                                            Time (Zulu)</label>
+                                        <input class="form-control form-control-solid form-input_text" type="time">
+                                        </input>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">End
+                                            Time (Zulu)</label>
+                                        <input class="form-control form-control-solid form-input_text" type="time">
+                                        </input>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <div class="form-floating mt-3">
+                                            <textarea class="form-control  form-control-solid form-input_text"
+                                                placeholder="Leave a comment here"></textarea>
+                                            <label for="floatingTextarea">NOTAM Content</label>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                         </div>
                     </div>
 
@@ -297,7 +297,8 @@
     <div class=" position-fixed bottom-0 end-0">
         <div class="d-flex me-1 mb-1">
             <span class="bg-white rounded border shadow d-block ">
-                <button class="btn btn-light border ms-2 my-2"><i class="bi bi-envelope-at-fill"></i> Email NOTAM</button>
+                <button class="btn btn-light border ms-2 my-2"><i class="bi bi-envelope-at-fill"></i> Email
+                    NOTAM</button>
                 <button class="btn btn-outline-danger ms-2 me-2"><i class="bi bi-x-circle-fill"></i>
                     Cancel</button>
             </span>
