--- a/notam.html
+++ b/notam.html
@@ -123,11 +123,12 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-12 mt-3 pb-3  bg-white border shadow-sm rounded-3 ">
-                            <span class="head_style_radio   d-block px-2 mt-3 border-bottom pb-3"> Issue NOTAM</span>
+                        <div class="col-lg-6 mt-3 ps-0 ">
+                            <div class="pb-3 px-2  bg-white border shadow-sm rounded-3">
+                                <span class="head_style_radio   d-block px-2 mt-3 border-bottom pb-3"> Issue NOTAM</span>
                             <div class="row mt-3">
 
-                                <div class="col-lg-3">
+                                <div class="col-lg-6">
                                     <label for="exampleFormControlInput1" class="font_lable form-label "> Airport Ident
                                     </label>
                                     <select class="form-select form-control-solid form-input_text"
@@ -140,13 +141,13 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">NOTAM
                                             Start Date</label>
                                         <input class="form-control form-control-solid form-input_text" type="date">
                                         </input>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Notam
                                             End Date</label>
                                         <input class="form-control form-control-solid form-input_text" type="date">
@@ -154,13 +155,13 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Start
                                             Time (Zulu)</label>
                                         <input class="form-control form-control-solid form-input_text" type="time">
                                         </input>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">End
                                             Time (Zulu)</label>
                                         <input class="form-control form-control-solid form-input_text" type="time">
@@ -174,14 +175,16 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                             </div>
                         </div>
 
-                        <div class="col-lg-12 mt-3 pb-3  bg-white border shadow-sm rounded-3 ">
+                        <div class="col-lg-6 mt-3 pe-0 ">
+                          <div class="pb-3  bg-white border shadow-sm rounded-3 px-2">
                             <span class="head_style_radio   d-block px-2 mt-3 border-bottom pb-3"> Extend NOTAM</span>
                             <div class="row mt-3">
 
-                                <div class="col-lg-3">
+                                <div class="col-lg-6">
                                     <label for="exampleFormControlInput1" class="font_lable form-label "> Airport Ident
                                     </label>
                                     <select class="form-select form-control-solid form-input_text"
@@ -194,13 +197,13 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">NOTAM
                                             Start Date</label>
                                         <input class="form-control form-control-solid form-input_text" type="date">
                                         </input>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Notam
                                             End Date</label>
                                         <input class="form-control form-control-solid form-input_text" type="date">
@@ -208,13 +211,13 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">Start
                                             Time (Zulu)</label>
                                         <input class="form-control form-control-solid form-input_text" type="time">
                                         </input>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-6">
                                         <label for="exampleFormControlInput1" class="font_lable form-label mt-3 ">End
                                             Time (Zulu)</label>
                                         <input class="form-control form-control-solid form-input_text" type="time">
@@ -229,6 +232,7 @@
                                     </div>
                                 </div>
                             </div>
+                          </div>
                         </div>
                     </div>
 
