--- a/notam.html
+++ b/notam.html
@@ -297,7 +297,7 @@
         </div>
     </div>
 
-    <!-- floating buttons -->
+    <!-- floating buttons start -->
     <div class=" position-fixed bottom-0 end-0">
         <div class="d-flex me-1 mb-1">
             <span class="bg-white rounded border shadow d-block ">
@@ -308,6 +308,7 @@
             </span>
         </div>
     </div>
+    <!-- floating button end  -->
 
     <!-- coustom js  -->
     <script src="./assets/js/main.js"></script>
