--- a/Index.html
+++ b/Index.html
@@ -83,13 +83,31 @@
       <!-- menu section start -->
       <div class="col-1 width_col-1">
         <div class="bg-light shadow rounded_side_nav d-none d-lg-block d-xl-block">
-          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <div>
+            <img class="d-flex justify-content-center py-3 px-1 img-fluid" src="./assets/imgs/icons/icon-bg-01.svg"
+              alt="">
+          </div>
+          <div>
+            <img class="d-flex justify-content-center py-3 px-1 img-fluid" src="./assets/imgs/icons/icon-bg-01.svg"
+              alt="">
+          </div>
+          <div>
+            <img class="d-flex justify-content-center py-3 px-1 img-fluid" src="./assets/imgs/icons/icon-bg-01.svg"
+              alt="">
+          </div>
+          <div>
+            <img class="d-flex justify-content-center py-3 px-1 img-fluid" src="./assets/imgs/icons/icon-bg-01.svg"
+              alt="">
+          </div>
+          <div>
+            <img class="d-flex justify-content-center py-3 px-1 img-fluid" src="./assets/imgs/icons/icon-bg-01.svg"
+              alt="">
+          </div>
+          <div>
+            <img class="d-flex justify-content-center py-3 px-1 img-fluid" src="./assets/imgs/icons/icon-bg-01.svg"
+              alt="">
+          </div>
+
         </div>
       </div>
       <!-- menu section end -->
