--- a/login.html
+++ b/login.html
@@ -332,6 +332,58 @@
     </footer>
     <!-- footer end  -->
 
+
+     <!-- off canva menu one start -->
+     <div class="offcanvas offcanvas-start offcanvas_width" tabindex="-1" id="offcanvasExample"
+     aria-labelledby="offcanvasExampleLabel">
+     <div class="offcanvas-header">
+         <h5 class="offcanvas-title" id="offcanvasExampleLabel">menu</h5>
+         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+     </div>
+     <div class="offcanvas-body">
+         <div>
+             <div class="container-fluid">
+                 <div class="row">
+                     <div class="col-12 bg-light  ">
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                         <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </div>
+ </div>
+ <!-- off canva menu one end -->
+
+ <!-- off canva menu two start -->
+ <div class="offcanvas offcanvas-start offcanvas_width_two" tabindex="-1" id="offcanvasExamplemenu"
+     aria-labelledby="offcanvasExampleLabel">
+     <div class="offcanvas-header">
+         <h5 class="offcanvas-title" id="offcanvasExampleLabel">menu</h5>
+         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+     </div>
+     <div class="offcanvas-body">
+         <div>
+             <div class="container-fluid">
+                 <div class="row">
+                     <div class="col-12 bg-light  ">
+                         <button class="btn d-block">Dashboard</button>
+                         <button class="btn d-block">Pages</button>
+                         <button class="btn d-block">App</button>
+                         <button class="btn d-block">Help</button>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </div>
+ </div>
     
     <!-- coustom js  -->
     <script src="./assets/js/main.js"></script>
