--- a/safety_screen.html
+++ b/safety_screen.html
@@ -418,13 +418,13 @@
                                                         <div class="col-lg-12 mb-3">
                                                             <div
                                                                 class="d-flex justify-content-lg-end flex-column flex-lg-row flex-md-row ">
-                                                                <button class="btn btn-light border "><i
+                                                                <button class=" my-1 btn btn-light border "><i
                                                                         class="bi bi-floppy2"></i> Save as Draft
                                                                 </button>
-                                                                <button class="btn btn-outline-primary ms-2 me-2"><i
+                                                                <button class=" my-1 btn btn-outline-primary ms-lg-2 me-lg-2"><i
                                                                         class="bi bi-cloud-download-fill "></i>
                                                                     Submit</button>
-                                                                <button class="btn btn-outline-danger"> <i
+                                                                <button class=" my-1 btn btn-outline-danger"> <i
                                                                         class="bi bi-x-circle"></i> Cancel</button>
                                                             </div>
                                                         </div>
